--- a/client/package.json
+++ b/client/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "frontend",
+  "name": "client",
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "proxy": "http://localhost:8443",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
