--- a/client/vercel.json
+++ b/client/vercel.json
@@ -4,7 +4,7 @@
         {"source": "/login", "destination": "/login"},
         {"source": "/signup", "destination": "/signup"},
         {"source": "/home", "destination": "/home"},
-        {"source": "/api/(.*)", "destination": "https://fechame-url-service-server.vercel.app/api/"},
+        {"source": "/api/:match", "destination": "https://fechame-url-service-server.vercel.app/api/:match"},
         {"source": "/:id", "destination": "https://fechame-url-service-server.vercel.app/:id"}
       ]
 }
