--- a/client/vercel.json
+++ b/client/vercel.json
@@ -1,9 +1,9 @@
 {
     "rewrites": [
         {"source": "/", "destination": "/"},
-        {"source": "/login", "destination": "/login"},
-        {"source": "/signup", "destination": "/signup"},
-        {"source": "/home", "destination": "/home"},
+        {"source": "/login", "destination": "login"},
+        {"source": "/signup", "destination": "signup"},
+        {"source": "/home", "destination": "home"},
         {"source": "/api/:match", "destination": "https://fechame-url-service-server.vercel.app/api/:match"},
         {"source": "/:id", "destination": "https://fechame-url-service-server.vercel.app/:id"}
       ]
