--- a/client/vercel.json
+++ b/client/vercel.json
@@ -1,7 +1,7 @@
 {
     "rewrites": [
+        {"source": "/(login|signup|home)", "destination": "/"},
         {"source": "/api/:match", "destination": "https://fechame-url-service-server.vercel.app/api/:match"},
-        {"source": "/:id{7}", "destination": "https://fechame-url-service-server.vercel.app/:id"},
-        {"source": "/(.*)", "destination": "/"}
+        {"source": "/:id{7}", "destination": "https://fechame-url-service-server.vercel.app/:id"}
       ]
 }
